Menu items and prices added

--- a/menu.html
+++ b/menu.html
@@ -14,17 +14,353 @@
 </head>
 
 <body>
-    <header class="header-container">
+    <header>
         <nav>
-            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
-            <ul>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="#">Our story</a></li>
-                <li><a id="reservation-nav" href="reservation.html">Reservation</a></li>
-            </ul>
+            <div class="header-container">
+                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
+                <ul class="menu">
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="#">Our story</a></li>
+                    <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
+    <main>
+        <h1> Menu </h1>
+        <ul class="menu-nav">
+            <li> Lunch </li>
+            <li> Dinner </li>
+            <li> Beverages </li>
+            <li> Coffe & Desert </li>
+        </ul>
+
+        <!--Lunch selection section starts here-->
+
+        <section>
+            <div class="background">
+                <h2> Lunch selection </h2>
+                <p class="serving-hours"> Served between 12-17 </p>
+                <h3> Smørrebrød <br>
+                    3 for 200,- </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li> With egg <br>
+                                <p class="food-description"> Poached egg - Trout Roe - Hollandaise Sauce </p>
+                            </li>
+                            <li> With fish fillet <br>
+                                <p class="food-description"> Remoulade - Fennel - Salad </p>
+                            </li>
+                            <li> With steak tartare <br>
+                                <p class="food-description"> Chips - Mayonnaise - Confit egg yolk </p>
+                            </li>
+                            <li> With cold smoked salmon <br>
+                                <p class="food-description"> Smoked cheese - Crispy cabbage - Herbs </p>
+                            </li>
+                            <li> With herring <br>
+                                <p class="food-description"> Onion compot - Salad - Herbs </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li> 75,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 75,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 75,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 75,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 75,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <h3> Smørrebrød <br>
+                    Served on light bread </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li> 'Shooting stars' - with shrimp <br>
+                                <p class="food-description"> Green tomatoes - Fennel - Tarragon mayonnaise </p>
+                            </li>
+                            <li> With poached egg <br>
+                                <p class="food-description"> Hollandaise Sauce - Roe - Ham </p>
+                            </li>
+                            <li> With shrimp <br>
+                                <p class="food-description"> Chips - Mayonnaise - Confit egg yolk </p>
+                            </li>
+                            <li> With toasted mushrooms <br>
+                                <p class="food-description"> Cream - Chili - Parsley </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li> 185,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 175,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 165,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 145,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Dinner selection section starts here-->
+
+        <section>
+            <div class="background">
+                <h2> Dinner selection </h2>
+                <p class="serving-hours"> Served between 18-22 </p>
+                <h3> Starters </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li> Fish Carpaccio <br>
+                                <p class="food-description"> Mussels - Herbs - Créme Fraiche </p>
+                            </li>
+                            <li> Roe <br>
+                                <p class="food-description"> Crispy butter dough - Créme Fraiche - Onion </p>
+                            </li>
+                            <li> Caviar Gold (30G) <br>
+                                <p class="food-description"> Can be asked intead of Roe </p>
+                            </li>
+                            <li> Cod <br>
+                                <p class="food-description"> Tomato consomme - Grilled tomato - Pickled tomato </p>
+                            </li>
+                            <li> Confit egg yolk <br>
+                                <p class="food-description"> Potato cream - Herbs - Green oil </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li> 135,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 195,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 450,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 145,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 125,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <h3> Main courses </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li> Bearnaise steak <br>
+                                <p class="food-description"> Calf meat - Danish potatoes - Seasonal vegetables </p>
+                            </li>
+                            <li> Tomahawk steak (1000G) <br>
+                                <p class="food-description"> Can be asked intead of Bearnaise steak </p>
+                            </li>
+                            <li> Whole pan-fried plaice <br>
+                                <p class="food-description"> Brown butter - Danish tomatoes - Cranberries </p>
+                            </li>
+                            <li> 'Shooting stars' - with shrimp <br>
+                                <p class="food-description"> Green tomatoes - Fennel - Tarragon mayonnaise </p>
+                            </li>
+                            <li> Catch of the day <br>
+                                <p class="food-description"> Frech fish - Seasonal vegetables </p>
+                            </li>
+                            <li> Chicken confit <br>
+                                <p class="food-description"> Tomato salad - Potatoes - Herbs </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li> 325,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 650,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 225,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 185,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 185,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                            <li> 199,- <br>
+                                <p class="none"> none </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <h3> Composed Gourment menu </h3>
+                <p class="serving-hours"> COME ALONG FOR A JOURNEY AROUND THE KITCHEN <br> Explore the kitchen’s gourmet
+                    menu composed from the season’s raw ingredients </p>
+                <h3 class="gourmet-h3"> 3 COURSES FOR 399,- </h3>
+                <h3 class="gourmet-h3"> 4 COURSES FOR 499,- </h3>
+                <h3 class="gourmet-h3"> 5 COURSES FOR 599,- </h3>
+            </div>
+        </section>
+
+        <!--Beverages section starts here-->
+
+        <section>
+            <div class="background">
+                <h2> Beverages </h2>
+                <p class="serving-hours"> Served between 12-22 (except between 17-18) </p>
+                <h3> Juices <br> ORGANIC JUICES FROM ADELHARDT </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li class="padding"> Lemon </li>
+                            <li class="padding"> Rhubarb </li>
+                            <li class="padding"> Elderflower </li>
+                            <li class="padding"> Cranberry </li>
+                            <li class="padding"> Apple must </li>
+                            <li class="padding"> Orange </li>
+                            <li class="padding"> Raspberry </li>
+                            <li class="padding"> Black currant </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                        </ul>
+                    </div>
+                </div>
+                <h3> Sodas <br> ORGANIC SODAS FROM ADELHARDT </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li class="padding"> Lemon </li>
+                            <li class="padding"> Squash </li>
+                            <li class="padding"> Rhubarb </li>
+                            <li class="padding"> Cranberry </li>
+                            <li class="padding"> Elderflower </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                        </ul>
+                    </div>
+                </div>
+                <h3> Sodas </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li class="padding"> Pepsi Cola 0,25l </li>
+                            <li class="padding"> Pepsi Max 0,25l </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Coffee & Dessert section starts here-->
+
+        <section>
+            <div class="background">
+                <h2> Coffee & Dessert </h2>
+                <p class="serving-hours"> Served between 12-22 (except between 17-18) </p>
+                <h3> Coffee </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li class="padding"> One cup of coffee </li>
+                            <li class="padding"> One jug of coffee</li>
+                            <li class="padding"> Irish coffee </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li class="padding"> 25,- </li>
+                            <li class="padding"> 45,- </li>   
+                            <li class="padding"> 65,- </li>                      
+                        </ul>
+                    </div>
+                </div>
+                <h3> Served with coffee <br> With the Cake of the day, coffee can be purchased for 15,- </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li class="padding"> Cake of the day </li>
+                            <li class="padding"> Cheese plate </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li class="padding"> 45,- </li>
+                            <li class="padding"> 135,- </li>                         
+                        </ul>
+                    </div>
+                </div>
+                <h3> Dessert </h3>
+                <div class="menu-grid-container">
+                    <div class="menu-items">
+                        <ul>
+                            <li class="padding"> Frozen Chocolate cake </li>
+                            <li class="padding"> Sweet Sabayon Sauce with Berries</li>
+                            <li> Ice cream 
+                                <p class="food-description"> Selection depending on the season </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu-prices">
+                        <ul>
+                            <li class="padding"> 135,- </li>
+                            <li class="padding"> 145,- </li>
+                            <li> 125,- <br>
+                                <p class="none"> none </p> 
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Menu section ends here-->
+
+    </main>
 
 </body>
 
