--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="assets/favicons/favicon-32x32.png" sizes="32x32" />
     <title>Gjøl Kro Restaurant</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap');
@@ -155,5 +156,54 @@
     </footer>
 
 </body>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "name": "Gjøl Kro",
+      "image": "https://www.google.com/maps/uv?pb=!1s0x46493a98644f49d3%3A0xee64761e113795b1!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNX-9-BHPIBIg6n2Nz-wqepvkrytdDG1vitVSf9%3Dw266-h200-k-no!5sgj%C3%B8l%20kro%20-%20Google-keres%C3%A9s!15sCgIgAQ&imagekey=!1e10!2sAF1QipNX-9-BHPIBIg6n2Nz-wqepvkrytdDG1vitVSf9&hl=hu&sa=X&ved=2ahUKEwiCoJrForT1AhUQQvEDHUttA9cQoip6BAgiEAM",
+      "@id": "",
+      "url": "https://www.gjoelkro.dk",
+      "telephone": "+45 22 36 76 87",
+      "priceRange": "Middle",
+      "menu": "https://www.gjoelkro.dk/menu",
+      "servesCuisine": "Tradtitional danish with modern twist",
+      "acceptsReservations": "true",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "FHORDGADE 18",
+        "addressLocality": "AABYBRO",
+        "postalCode": "9440",
+        "addressCountry": "DK"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 57.0638045,
+        "longitude": 9.6997467
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "12:00",
+        "closes": "22:00"
+      },
+      "sameAs": [
+        "https://www.facebook.com/GjoelKro",
+        "https://www.instagram.com/gjoel_kro/"
+      ],
+      "department": {
+        "@type": "LocalBusiness",
+        "name": "",
+        "image": "",
+        "telephone": "" 
+      }
+    }
+    </script>
 
 </html>
