--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
                     </form>
                 </div>
                 <div class="footer-col">
-                    <a href="#">
                         <h4>Visit us</h4>
-                    </a>
                     <ul>
                         <li>Monday: Closed</li>
                         <li>Tuesday: Closed</li>
@@ -144,8 +142,8 @@
                 <div class="footer-col">
                     <h4>Follow us</h4>
                     <div class="social-links">
-                        <a href="#"><i id="facebook-icon" class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram "></i></a>
+                        <a href="https://www.facebook.com/GjoelKro" target="_blank"><i id="facebook-icon" class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/gjoel_kro/" target="_blank"><i class="fab fa-instagram "></i></a>
                     </div>
                 </div>
             </div>
