--- a/reservation.html
+++ b/reservation.html
@@ -265,8 +265,8 @@
                     <div class="footer-col">
                         <h4>Follow us</h4>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-instagram "></i></a>
+                            <a href="https://www.facebook.com/GjoelKro" target="_blank"><i id="facebook-icon" class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/gjoel_kro/" target="_blank"><i class="fab fa-instagram "></i></a>
                         </div>
                     </div>
                 </div>
