Deleted useless files + added contact nav on all pages
Contact nav button jumps to the footer

--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="assets/favicons/favicon-32x32.png" sizes="32x32" />
+
     <title>Gjøl Kro Restaurant</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
@@ -25,6 +27,7 @@
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#">Our story</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
             </ul>
         </div>
@@ -265,7 +268,7 @@
                     </form>
                 </div>
                 <div class="footer-col">
-                    <h4>Contact us</h4>
+                    <h4 id="contact">Contact us</h4>
                     <ul>
                         <li>22 36 76 87</li>
                         <li>Fhordgade 18, <br> 9440 Aabybro</li>
