--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Our story</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
                 </ul>
             </div>
@@ -116,7 +117,7 @@
                     </form>
                 </div>
                 <div class="footer-col">
-                    <h4>Contact us</h4>
+                    <h4 id="contact">Contact us</h4>
                     <ul>
                         <li>22 36 76 87</li>
                         <li>Fhordgade 18, <br> 9440 Aabybro</li>
