--- a/gallery.html
+++ b/gallery.html
@@ -66,8 +66,8 @@
                 </div>
             </div>
 
-            <img class="potato" src="assets/images/DO NOT USE(POTATO WITH BACKGROUND).jpg" alt="POTATO">
-            <img class="tartar" src="assets/images/tartar.jpg" alt="chicken">
+            <img class="potato" src="assets/images/DO NOT USE(POTATO WITH BACKGROUND).jpg" alt=" boiled potato garnish with fresh local persile">
+            <img class="tartar" src="assets/images/tartar.jpg" alt="spicy beef tartar gjoel kro style">
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
@@ -88,8 +88,8 @@
                     <p class="paragraph1">Taste our salmon and <br> experience the moment <br>fully next to the sea.</p>
                 </div>
             </div>
-            <img class="salmon" src="assets/images/salmon-min.jpg" alt="salmon-min">
-            <img class="fish" src="assets/images/fish and chip.jpg" alt="fish">
+            <img class="salmon" src="assets/images/salmon-min.jpg" alt="Fresh local salmon filet">
+            <img class="fish" src="assets/images/fish and chip.jpg" alt="Crispy delicious fish and chips made from local cod ">
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
@@ -116,8 +116,8 @@
                 </div>
             </div>
 
-            <img class="chicken" src="assets/images/chicken.jpg" alt="chicken">
-            <img class="cod" src="assets/images/cod.jpg" alt="cod">
+            <img class="chicken" src="assets/images/chicken.jpg" alt="delicious roast chicken">
+            <img class="cod" src="assets/images/cod.jpg" alt="fresh local cod filet with homemade lemon balm sauce">
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
@@ -139,8 +139,8 @@
                         caviar!</p>
                 </div>
             </div>
-            <img class="caviar" src="assets/images/carviar.jpg" alt="caviar">
-            <img class="pork" src="assets/images/pork belly 2.jpeg" alt="pork">
+            <img class="caviar" src="assets/images/carviar.jpg" alt="Premium beluga caviar">
+            <img class="pork" src="assets/images/pork belly 2.jpeg" alt="flaeskesteg with traditional danish potato garnish and persil sauce">
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
@@ -165,8 +165,8 @@
                 </div>
             </div>
 
-            <img class="gin" src="assets/images/gin.jpg" alt="gin">
-            <img class="orange" src="assets/images/pexels-timur-weber-8679366.jpg" alt="orange">
+            <img class="gin" src="assets/images/gin.jpg" alt="gin with lemon and mint">
+            <img class="orange" src="assets/images/pexels-timur-weber-8679366.jpg" alt="fresh orange juice">
             <div class="row">
                 <div class="banner">
                     <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
@@ -187,7 +187,7 @@
                     <p class="paragraph1">Freshen up yourself with <br>our sweet and cooling lemonade.</p>
                 </div>
             </div>
-            <img class="lemonade-min" src="assets/images/lemonade-min.jpg" alt="lemonade-min">
+            <img class="lemonade-min" src="assets/images/lemonade-min.jpg" alt="homemade lemonade">
             <img class="strawberry" src="assets/images/pexels-ehioma-osih-10766779.jpg" alt="strawberry">
             <div class="row">
                 <div class="banner">
@@ -218,8 +218,8 @@
             </div>
         </div>
 
-        <img class="choco" src="assets/images/choco icecream.jpg" alt="choco">
-        <img class="coffee" src="assets/images/coffee.jpg" alt="coffee">
+        <img class="choco" src="assets/images/choco icecream.jpg" alt="amazing homemade chocolate icecream">
+        <img class="coffee" src="assets/images/coffee.jpg" alt="delicious coffee">
         <div class="row">
             <div class="banner">
                 <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
@@ -240,8 +240,8 @@
                 <p class="paragraph1">Try it, you won’t regret it!</p>
             </div>
         </div>
-        <img class="panacotta" src="assets/images/panacotta.jpg" alt="panacotta">
-        <img class="choclate" src="assets/images/choclate cake.jpg" alt="choclate">
+        <img class="panacotta" src="assets/images/panacotta.jpg" alt="strawberry vanilla panacotta">
+        <img class="choclate" src="assets/images/choclate cake.jpg" alt="chocolate cake">
         <div class="row">
             <div class="banner">
                 <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
