Fixed responsiveness and menu-nav

--- a/menu.html
+++ b/menu.html
@@ -30,17 +30,18 @@
     <main>
         <h1> Menu </h1>
         <ul class="menu-nav">
-            <li> Lunch </li>
-            <li> Dinner </li>
-            <li> Beverages </li>
-            <li> Coffe & Desert </li>
+            <li><a href='#lunch'> Lunch </a></li>
+            <li><a href='#dinner'> Dinner </a></li>
+            <li><a href='#beverages'> Beverages </a></li>
+            <li><a href='#coffee'> Coffee & Dessert </a></li>
         </ul>
+
 
         <!--Lunch selection section starts here-->
 
         <section>
             <div class="background">
-                <h2> Lunch selection </h2>
+                <h2 id='lunch'> Lunch selection </h2>
                 <p class="serving-hours"> Served between 12-17 </p>
                 <h3> Smørrebrød <br>
                     3 for 200,- </h3>
@@ -127,7 +128,7 @@
 
         <section>
             <div class="background">
-                <h2> Dinner selection </h2>
+                <h2 id='dinner'> Dinner selection </h2>
                 <p class="serving-hours"> Served between 18-22 </p>
                 <h3> Starters </h3>
                 <div class="menu-grid-container">
@@ -230,7 +231,7 @@
 
         <section>
             <div class="background">
-                <h2> Beverages </h2>
+                <h2 id='beverages'> Beverages </h2>
                 <p class="serving-hours"> Served between 12-22 (except between 17-18) </p>
                 <h3> Juices <br> ORGANIC JUICES FROM ADELHARDT </h3>
                 <div class="menu-grid-container">
@@ -255,6 +256,7 @@
                             <li class="padding"> 28,- </li>
                             <li class="padding"> 28,- </li>
                             <li class="padding"> 28,- </li>
+                            <li class="padding"> 28,- </li>
                         </ul>
                     </div>
                 </div>
@@ -271,6 +273,7 @@
                     </div>
                     <div class="menu-prices">
                         <ul>
+                            <li class="padding"> 28,- </li>
                             <li class="padding"> 28,- </li>
                             <li class="padding"> 28,- </li>
                             <li class="padding"> 28,- </li>
@@ -300,7 +303,7 @@
 
         <section>
             <div class="background">
-                <h2> Coffee & Dessert </h2>
+                <h2 id='coffee'> Coffee & Dessert </h2>
                 <p class="serving-hours"> Served between 12-22 (except between 17-18) </p>
                 <h3> Coffee </h3>
                 <div class="menu-grid-container">
@@ -314,8 +317,8 @@
                     <div class="menu-prices">
                         <ul>
                             <li class="padding"> 25,- </li>
-                            <li class="padding"> 45,- </li>   
-                            <li class="padding"> 65,- </li>                      
+                            <li class="padding"> 45,- </li>
+                            <li class="padding"> 65,- </li>
                         </ul>
                     </div>
                 </div>
@@ -330,7 +333,7 @@
                     <div class="menu-prices">
                         <ul>
                             <li class="padding"> 45,- </li>
-                            <li class="padding"> 135,- </li>                         
+                            <li class="padding"> 135,- </li>
                         </ul>
                     </div>
                 </div>
@@ -340,7 +343,7 @@
                         <ul>
                             <li class="padding"> Frozen Chocolate cake </li>
                             <li class="padding"> Sweet Sabayon Sauce with Berries</li>
-                            <li> Ice cream 
+                            <li> Ice cream
                                 <p class="food-description"> Selection depending on the season </p>
                             </li>
                         </ul>
@@ -350,7 +353,7 @@
                             <li class="padding"> 135,- </li>
                             <li class="padding"> 145,- </li>
                             <li> 125,- <br>
-                                <p class="none"> none </p> 
+                                <p class="none"> none </p>
                             </li>
                         </ul>
                     </div>
