Fixed a few things in gallery
Fixed some naming of classes and alignment of elements

--- a/gallery.html
+++ b/gallery.html
@@ -33,14 +33,14 @@
         </div>
     </nav>
 
-    <p class="p1">GALLERY</p>
+    <h1 class="h1-gallery">GALLERY</h1>
 
     <nav class="nav2">
-        <ul>
-            <li><a href="#LUNCH">Lunch</a></li>
-            <li><a href="#DINNER">Dinner</a></li>
-            <li><a href="#BEVERAGES">Beverages</a></li>
-            <li><a href="#COFFEE & DESSERT">Coffee & Dessert</a></li>
+        <ul class="menu-nav">
+            <li><a href='#lunch'> Lunch </a></li>
+            <li><a href='#dinner'> Dinner </a></li>
+            <li><a href='#beverages'> Beverages </a></li>
+            <li><a href='#coffee & dessert'> Coffee & Dessert </a></li>
         </ul>
     </nav>
 </header>
@@ -51,9 +51,9 @@
 
 
         <div id="LUNCH">
-            <p class="p2">
+            <h2 class="h2-gallery">
                 LUNCH
-            </p>
+            </h2>
         </div>
 
 
@@ -102,9 +102,9 @@
 
 
         <div id="DINNER">
-            <p class="p2">
+            <h2 class="h2-gallery">
                 DINNER
-            </p>
+            </h2>
         </div>
 
         <div class="main">
@@ -151,9 +151,9 @@
         </div>
 
         <div id="BEVERAGES">
-            <p class="p2">
+            <h2 class="h2-gallery">
                 BEVERAGES
-            </p>
+            </h2>
         </div>
 
         <div class="main">
@@ -204,9 +204,9 @@
 
 
     <div id="COFFEE & DESSERT">
-        <p class="p2">
+        <h2 class="h2-gallery">
             COFFEE & DESSERT
-        </p>
+        </h2>
     </div>
 
     <div class="main">
