--- a/gallery.html
+++ b/gallery.html
@@ -254,7 +254,7 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <img src="assets/images/Gjol-Kro_logo_white.svg" style="height: 80px;" alt="Gjol Kro Logo">
+            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;" alt="Gjol Kro Logo"></a>
             <div class="footer-row">
                 <div class="footer-col">
                     <h4>Explore more</h4>
@@ -262,6 +262,7 @@
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Gallery</a></li>
                         <li><a href="#">Our story</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
                     </ul>
                     <form method="get" action="reservation.html">
                         <button type="submit" class="footer-button-reserve">Reserve a table</button>
