--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <div class="header-container">
-                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
+                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt="Gjol Kro Logo"></a>
                 <ul class="menu">
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -103,14 +103,15 @@
     </main>
     <footer class="footer">
         <div class="footer-container">
-            <img src="assets/images/Gjol-Kro_logo_white.svg" style="height: 80px;" alt="Gjol Kro Logo">
+            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;" alt="Gjol Kro Logo"></a>
             <div class="footer-row">
                 <div class="footer-col">
                     <h4>Explore more</h4>
                     <ul>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="#">Our story</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
                     </ul>
                     <form method="get" action="reservation.html">
                         <button type="submit" class="footer-button-reserve">Reserve a table</button>
