--- a/reservation.html
+++ b/reservation.html
@@ -226,7 +226,7 @@
         </div>
         <footer class="footer">
             <div class="footer-container">
-                <img src="assets/images/Gjol-Kro_logo_white.svg" style="height: 80px;" alt="">
+                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;" alt="Gjol Kro Logo"></a>
                 <div class="footer-row">
                     <div class="footer-col">
                         <h4>Explore more</h4>
@@ -234,6 +234,7 @@
                             <li><a href="#">Menu</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
                             <li><a href="#">Our story</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
                         </ul>
                         <form method="get" action="reservation.html">
                             <button type="submit" class="footer-button">Reserve a table</button>
