--- a/reservation.html
+++ b/reservation.html
@@ -216,7 +216,7 @@
                     <p id=notes>Notes</p>
                     <textarea id="message" name="visitor_message"
                         placeholder="Tell us something else that might be important..."></textarea>
-                    <label id="policy" for="terms">I agree to the <a href="#">Terms</a> and the<a href="#">Privacy
+                    <label id="policy" for="terms">I agree to the <a style="color:beige" href="#">Terms</a> and the <a style="color:beige" href="#">Privacy
                             Policy</a> </label>
                     <input type="checkbox" id="terms2" name="terms" value="terms" required />
                 </div>
