--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <img class="potato" src="assets/images/DO NOT USE(POTATO WITH BACKGROUND).jpg" alt=" boiled potato garnish with fresh local persile">
+            <img class="potato" src="assets/images/potato.jpg" alt=" Glazed new potatoes with parsley close-up on the table. horizontal top view">
             <img class="tartar" src="assets/images/tartar.jpg" alt="spicy beef tartar gjoel kro style">
             <div class="row">
                 <div class="banner">
