--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                     <label for="email"></label>
                     <input placeholder="Enter your e-mail here" type="email" id="email" name="email">
                     <input type="submit" value="Subscribe">
-                    <label for="terms">I give my consent to Gjøl Kro to be in touch with me via email using the <br>
-                        information I have provided in this form for the purpose of news and marketing.</label>
+                    <label for="terms"> I agree to the Terms and to the <a href="privacypolicy.html"> Privacy Policy </a></label>
                     <input type="checkbox" id="terms" name="terms" value="terms" required /><br>
                 </form>
             </div>
