--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul class="menu">
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="#">Our story</a></li>
+                    <li><a href="ourstory.html">Our story</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
                 </ul>
