Footer button fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <div class="header-container">
-                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt="Gjol Kro Logo"></a>
+                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" title="Hygge" alt="Gjol Kro Logo"></a>
                 <ul class="menu">
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
