Added new reservation and privacy policy links

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="#">Our story</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="privacypolicy.html">Privacy Policy</a></li>
                     </ul>
                     <form method="get" action="reservation.html">
                         <button type="submit" class="footer-button-reserve">Reserve a table</button>
