--- a/gallery.html
+++ b/gallery.html
@@ -259,10 +259,10 @@
                 <div class="footer-col">
                     <h4>Explore more</h4>
                     <ul>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="#">Our story</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="privacypolicy.html">Privacy Policy</a></li>
                     </ul>
                     <form method="get" action="reservation.html">
                         <button type="submit" class="footer-button-reserve">Reserve a table</button>
