--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -31,21 +31,87 @@
         <h1> Privacy policy </h1>
         <section class='privacy-section'>
             <h4> Personal information </h4>
-            <p> When you access our website, your personal information is registered. Personal information is information that leads back to you. This can i.a. be information about your computer or mobile phone, IP number, geographical location, as well as your navigation on the page. This information can be used in connection with. newsletters, competitions, surveys, etc.
+            <p> When you access our website, your personal information is registered. Personal information is
+                information that leads back to you. This can i.a. be information about your computer or mobile phone, IP
+                number, geographical location, as well as your navigation on the page. This information can be used in
+                connection with. newsletters, competitions, surveys, etc.
 
-                If you give consent to and enter your name, e-mail, address, telephone number and payment information, this information can also be processed. As a rule, this information will only be relevant to access when creating a purchase or login. </p>
+                If you give consent to and enter your name, e-mail, address, telephone number and payment information,
+                this information can also be processed. As a rule, this information will only be relevant to access when
+                creating a purchase or login. </p>
         </section>
         <section class='privacy-section'>
             <h4> Insight into information and complaints </h4>
-            <p> It is always your right to be informed of the exact personal information we process about you. In addition, you can at any time refuse to use the information. In addition, you can have your consent to have information about you processed processed. If any information that is processed is incorrect, you have the right to have it deleted or corrected. This is done by contacting us at: thunpichachuaythai@gmail.com
+            <p> It is always your right to be informed of the exact personal information we process about you. In
+                addition, you can at any time refuse to use the information. In addition, you can have your consent to
+                have information about you processed processed. If any information that is processed is incorrect, you
+                have the right to have it deleted or corrected. This is done by contacting us at:
+                thunpichachuaythai@gmail.com
 
-                If you feel that our processing of your personal data is incorrect and you wish to complain, you can contact the Danish Data Protection Agency. </p>
+                If you feel that our processing of your personal data is incorrect and you wish to complain, you can
+                contact the Danish Data Protection Agency. </p>
         </section>
 
 
 
 
     </main>
+    <footer class="footer">
+        <div class="footer-container">
+            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;"
+                    alt="Gjol Kro Logo"></a>
+            <div class="footer-row">
+                <div class="footer-col">
+                    <h4>Explore more</h4>
+                    <ul>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="#">Our story</a></li>
+                        <li><a href="privacypolicy.html">Privacy Policy</a></li>
+                    </ul>
+                    <form method="get" action="reservation.html">
+                        <button type="submit" class="footer-button-reserve">Reserve a table</button>
+                    </form>
+                </div>
+                <div class="footer-col">
+                    <h4 id="contact">Contact us</h4>
+                    <ul>
+                        <li>22 36 76 87</li>
+                        <li>Fhordgade 18, <br> 9440 Aabybro</li>
+                        <li id="click-here">Click here to view on google maps:</li>
+                    </ul>
+                    <form method="get"
+                        action="https://www.google.hu/maps/place/Gj%C3%B8l+Kro+-+Kroen+ved+fjorden/@57.0638002,9.6974996,17z/data=!3m1!4b1!4m5!3m4!1s0x46493a98644f49d3:0xee64761e113795b1!8m2!3d57.0638002!4d9.6996883">
+                        <button type="submit" class="footer-button">View on map</button>
+                    </form>
+                </div>
+                <div class="footer-col">
+                    <h4>Visit us</h4>
+                    <ul>
+                        <li>Monday: Closed</li>
+                        <li>Tuesday: Closed</li>
+                        <li>Wednesday: 12 Pm - 10 pm</li>
+                        <li>Thursday: 12 pm - 10 pm</li>
+                        <li>Friday: 12 pm - 10 pm</li>
+                        <li>Saturday: 12 pm - 10 pm</li>
+                        <li>Sunday: 12 pm - 10 pm</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/GjoelKro" target="_blank"><i id="facebook-icon"
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/gjoel_kro/" target="_blank"><i
+                                class="fab fa-instagram "></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>© Copyright. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
