Reservation nav added
also added a bit of a margin, nav section fixed in responsive mode

--- a/reservation.html
+++ b/reservation.html
@@ -17,8 +17,18 @@
 </head>
 
 <header>
-            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt="Gjol Kro Logo"></a>
-
+    <nav>
+        <div class="header-container">
+            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" title="Hygge" alt="Gjol Kro Logo"></a>
+            <ul class="menu">
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="#">Our story</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
+            </ul>
+        </div>
+    </nav>
 </header>
 
 <body>
