--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="assets/menu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Gjøl Kro Restaurant</title>
+    <title>Gjøl Kro Menu</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap');
     </style>
