--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/menu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/png" href="assets/favicons/favicon-32x32.png" sizes="32x32" />
-    <title>Gjøl Kro Restaurant</title>
+    <title>Gjøl Kro Privacy Policy</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap');
     </style>
