--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <label for="email"></label>
                     <input placeholder="Enter your e-mail here" type="email" id="email" name="email">
                     <input type="submit" value="Subscribe">
-                    <label for="terms"> I agree to the Terms and to the <a href="privacypolicy.html"> Privacy Policy </a></label>
+                    <label for="terms"> I agree to the Terms and to the <a style="color: beige;" href="privacypolicy.html"> Privacy Policy </a></label>
                     <input type="checkbox" id="terms" name="terms" value="terms" required /><br>
                 </form>
             </div>
