--- a/gallery.html
+++ b/gallery.html
@@ -261,7 +261,7 @@
                     <ul>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="#">Our story</a></li>
+                        <li><a href="ourstory.html">Our story</a></li>
                         <li><a href="privacypolicy.html">Privacy Policy</a></li>
                     </ul>
                     <form method="get" action="reservation.html">
